--- a/apps/api/config/packages/zenstruck_foundry.yaml
+++ b/apps/api/config/packages/zenstruck_foundry.yaml
@@ -1,5 +1,5 @@
-when@dev:
-  &dev # See full configuration: https://symfony.com/bundles/ZenstruckFoundryBundle/current/index.html#full-default-bundle-configuration
+# See full configuration: https://symfony.com/bundles/ZenstruckFoundryBundle/current/index.html#full-default-bundle-configuration
+when@dev: &dev
   zenstruck_foundry:
     # Whether to auto-refresh proxies by default (https://symfony.com/bundles/ZenstruckFoundryBundle/current/index.html#auto-refresh)
     auto_refresh_proxies: true
