add mercure implementation

--- a/apps/api/Caddyfile
+++ b/apps/api/Caddyfile
@@ -7,6 +7,21 @@ api.lonlat.localhost {
 
 	encode zstd gzip
 
+	mercure {
+		transport_url bolt://mercure.db
+		publisher_jwt "!ChangeThisMercureHubJWTSecretKey!" HS256
+		subscriber_jwt "!ChangeThisMercureHubJWTSecretKey!" HS256
+
+		cors_origins *
+		publish_origins *
+
+		demo
+		anonymous
+		subscriptions
+	}
+
+	respond /healthz 200
+
 	file_server
 	php_fastcgi unix//run/php/php8.3-fpm.sock
 }
