fix conflict with props name : type, change from type to color

--- a/apps/api/Caddyfile
+++ b/apps/api/Caddyfile
@@ -7,6 +7,13 @@ api.lonlat.localhost {
 
 	encode zstd gzip
 
+	log {
+		output file var/log/caddy.log {
+			roll_size 10MiB
+			roll_keep 2
+		}
+	}
+
 	mercure {
 		transport_url bolt://mercure.db
 		publisher_jwt "!ChangeThisMercureHubJWTSecretKey!" HS256
