add maplibre examples

--- a/apps/maplibre-sandbox/package.json
+++ b/apps/maplibre-sandbox/package.json
@@ -18,16 +18,26 @@
         "@lonlat/maplibre-react": "workspace:*",
         "@lonlat/shared": "workspace:*",
         "@mapbox/mapbox-gl-draw": "^1.4.3",
+        "@mapbox/polyline": "^1.2.1",
         "@turf/turf": "6.5.0",
         "@types/geojson": "^7946.0.14",
         "@types/proj4": "^2.5.5",
+        "events": "^3.3.0",
         "geojson": "^0.5.0",
+        "lodash.debounce": "^4.0.8",
+        "lodash.isequal": "^4.5.0",
+        "lodash.template": "^4.5.0",
         "mapbox-gl-fps": "^1.0.1",
         "maplibre-gl": "^4.0.0",
+        "merge-options": "^3.0.4",
         "proj4": "^2.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sass": "^1.70.0"
+        "redux": "^5.0.1",
+        "redux-thunk": "^3.1.0",
+        "sass": "^1.70.0",
+        "suggestions": "^1.7.1",
+        "turf-extent": "^1.0.4"
     },
     "devDependencies": {
         "@types/mapbox__mapbox-gl-draw": "^1.4.6",
