--- a/apps/maplibre-sandbox/tsconfig.json
+++ b/apps/maplibre-sandbox/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.base.json",
     "compilerOptions": {
         "checkJs": true,
+        "allowJs": true,
         "paths": {
           "~/*": [
             "./src/*"
