vite-sandbox purge and rename

--- a/apps/vite-sandbox/package.json
+++ b/apps/vite-sandbox/package.json
@@ -20,6 +20,7 @@
         "maplibre-gl": "^3.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-spring": "^9.7.3",
         "sass": "^1.69.5",
         "usehooks-ts": "^2.9.1"
     },
