--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -16,9 +16,11 @@
         "@lonlat/maplibre-ext": "workspace:*",
         "@lonlat/maplibre-react": "workspace:*",
         "@lonlat/shared": "workspace:*",
+        "@use-gesture/react": "^10.3.0",
         "fuse.js": "^7.0.0",
         "maplibre-gl": "^3.6.2",
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "react-spring": "^9.7.3"
     },
     "devDependencies": {
         "@storybook/addon-actions": "^7.6.4",
