--- a/extra/shared/package.json
+++ b/extra/shared/package.json
@@ -27,11 +27,13 @@
     "dependencies": {
         "@floating-ui/react": "^0.26.4",
         "@lonlat/fonts": "workspace:*",
+        "@use-gesture/react": "^10.3.0",
         "classnames": "^2.3.2",
         "fuse.js": "^7.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-polymorphic-types": "^2.0.0",
+        "react-spring": "^9.7.3",
         "sass": "^1.69.5",
         "usehooks-ts": "^2.9.1"
     }
