add contextMenuEventDispatcher for context menu with maplibre

--- a/extra/maplibre-ext/tsconfig.json
+++ b/extra/maplibre-ext/tsconfig.json
@@ -5,10 +5,10 @@
             "@testing-library/jest-dom"
         ],
         "paths": {
-            "@lonlat/shared": [
-                "."
+          "@lonlat/maplibre-ext": [
+            "."
             ],
-            "@lonlat/shared/*": [
+            "@lonlat/maplibre-ext/*": [
                 "./*"
             ],
             "@storybook/react": [
