--- a/extra/maplibre-react/package.json
+++ b/extra/maplibre-react/package.json
@@ -32,6 +32,7 @@
         "maplibre-gl": "^3.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-map-gl": "^7.1.7",
         "sass": "^1.69.5",
         "usehooks-ts": "^2.9.1"
     }
