--- a/extra/maplibre-react/tsconfig.json
+++ b/extra/maplibre-react/tsconfig.json
@@ -5,10 +5,10 @@
             "@testing-library/jest-dom"
         ],
         "paths": {
-            "@lonlat/shared": [
+            "@lonlat/maplibre-react": [
                 "."
             ],
-            "@lonlat/shared/*": [
+            "@lonlat/maplibre-react/*": [
                 "./*"
             ],
             "@storybook/react": [
